@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150121"
-#define public MagickPackageReleaseDate "snapshot-20150121"
+#define public MagickPackageVersionAddendum ".020150122"
+#define public MagickPackageReleaseDate "snapshot-20150122"
