@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2015-01-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pnm.c (WritePNMImage): Fix overwrite of status by
+progress monitor.  Remaining issues may lurk within.  May resolve
+Coverity CID 10288.</li>
+<li>coders/pdb.c: Resolve Coverity CID 11173 &quot;Buffer not null
+terminated&quot;.</li>
+</ul>
+</blockquote>
 <p>2015-01-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
